init connecting status

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <input type="checkbox" id="dnsToggle">
       <span class="slider round"></span>
     </label>
+    <div id="status" class="status">Checking...</div>
+    <div id="connection-status" class="connection-status"></div>
   </div>
   <script src="./script.js"></script>
 </body>
