init logo + formatting tweaks

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DNS Toggle App</title>
+  <title>Warpgate - Cloudflare DNS Toggler</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="container">
-    <h1>DNS Toggle App</h1>
+    <div class="logo">
+      <img src="./assets/images/logo.png" alt="logo">
+    </div>
     <label class="switch">
       <input type="checkbox" id="dnsToggle">
       <span class="slider round"></span>
