up/download working + security tweaks

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warpgate - Cloudflare DNS Toggler</title>
+  <title>WarpGate - Cloudflare DNS Toggler</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -17,6 +17,11 @@
     </label>
     <div id="status" class="status">Checking...</div>
     <div id="connection-status" class="connection-status"></div>
+    <div class="speed">
+      <div id="download-speed">Download Speed: Checking...</div>
+      <div id="upload-speed">Upload Speed: Checking...</div>
+    </div>
+    <div class="version" id="version">v1.0.0</div> <!-- Placeholder text -->
   </div>
   <script src="./script.js"></script>
 </body>
